# assessment-senior-backend-engineer-9572fac8

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/session_trace/: router.py  store.py
tests/: test_health.py  test_trace.py
