[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestrel-session-trace"
version = "0.1.0"
description = "Candidate assessment — session-trace API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
